@@ -77,14 +77,19 @@ class TestPlatypusReduce:
             # try reduction with the reduce method
             a.reduce(
                 "PLP0000708.nx.hdf",
-                data_folder=self.pth,
                 rebin_percent=4,
             )
 
             # try reduction with the __call__ method
             a(
                 "PLP0000708.nx.hdf",
-                data_folder=self.pth,
+                rebin_percent=4,
+            )
+
+            # try setting up reducer object with string, not Path
+            a = PlatypusReduce("PLP0000711.nx.hdf", data_folder=str(self.pth))
+            a.reduce(
+                "PLP0000708.nx.hdf",
                 rebin_percent=4,
             )
 
